--- a/styles/Common.module.css
+++ b/styles/Common.module.css
@@ -36,7 +36,7 @@
   margin-bottom: 1rem;
   color: #0f75bc;
   width: 100%;
-  height: 12vh;
+  /* height: 12vh; */
   box-shadow: 4px 4px 13px -0px #00000027;
 }
 @media only screen and (max-width: 800px) {
