--- a/styles/Common.module.css
+++ b/styles/Common.module.css
@@ -1,10 +1,10 @@
 .ListCard {
   background-color: #f5faff;
   border-radius: 5px;
-  padding: 1.5rem 2rem !important;
+  padding: 2rem 1rem !important;
   margin: 1rem;
   color: #0f75bc;
-  max-width: 285px;
+  /* max-width: 285px; */
   box-shadow: 4px 4px 13px -0px #00000027;
 }
 
@@ -33,7 +33,7 @@
   background-color: #f5faff;
   border-radius: 5px;
   padding: 1.5rem 2rem !important;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   color: #0f75bc;
   width: 100%;
   /* height: 12vh; */
@@ -48,7 +48,8 @@
   /* margin: 0; */
   font-size: 1.7rem !important;
   color: #0f75bc;
-  width: 200px;
+  width: 100%;
+  padding-bottom: 1rem;
 }
 
 .CourseCard p {
